--- a/public/app/css/sass/partials/_helpers.sass
+++ b/public/app/css/sass/partials/_helpers.sass
@@ -173,21 +173,22 @@ a
 .top-pull-3
   top: -3px
 
-.addthis_toolbox.addthis_vertical_style
-  width: 200px
-  position: fixed
-  top: 45%
-  z-index: 9999
-  background: $gold
+.addthis_inline_follow_toolbox
+  .addthis_toolbox.addthis_vertical_style
+    width: 200px
+    position: fixed
+    top: 45%
+    z-index: 9999
+    background: $gold
 
-.at-icon-wrapper
-  display: block!important
-.addthis_follow_label
-  display: none!important
+  .at-icon-wrapper
+    display: block!important
+  .addthis_follow_label
+    display: none!important
 
-.at-follow-tbx-element .at300b, .at-follow-tbx-element .at300m
-  margin: 5px 0!important
+  .at-follow-tbx-element .at300b, .at-follow-tbx-element .at300m
+    margin: 5px 0!important
 
-.addthis_toolbox.addthis_vertical_style
-  width: 43px!important
-  padding: 0 5px!important
+  .addthis_toolbox.addthis_vertical_style
+    width: 43px!important
+    padding: 0 5px!important
