--- a/public/app/css/sass/partials/_helpers.sass
+++ b/public/app/css/sass/partials/_helpers.sass
@@ -179,7 +179,7 @@ a
     position: fixed
     top: 45%
     z-index: 9999
-    background: $gold
+    background: $primary
 
   .at-icon-wrapper
     display: block!important
