--- a/public/app/css/sass/style.css
+++ b/public/app/css/sass/style.css
@@ -237,7 +237,7 @@ a.text-white:hover, a.text-white:focus, a.text-white:active {
   position: fixed;
   top: 45%;
   z-index: 9999;
-  background: #f1b72f;
+  background: #ab353c;
 }
 .addthis_inline_follow_toolbox .at-icon-wrapper {
   display: block !important;
