Style mobile navigation fix. Livestream setup, code cleaning. Pejurativno removed.

--- a/public/app/css/sass/partials/_content.sass
+++ b/public/app/css/sass/partials/_content.sass
@@ -141,8 +141,8 @@ header nav .navbar-nav.navbar-secondary > li > a
 .full-width-pull-menu .link-style-2 ul li a
   background: inherit
   color: $white
-  font-size: 30px
-  line-height: 60px
+  font-size: 24px
+  line-height: 2
   position: relative
 
 .full-width-pull-menu .link-style-2 ul li:hover > a, .full-width-pull-menu .link-style-2 ul li.open > a
