--- a/public/app/css/sass/style.css
+++ b/public/app/css/sass/style.css
@@ -795,8 +795,8 @@ header nav .navbar-nav.navbar-secondary > li > a {
 .full-width-pull-menu .link-style-2 ul li a {
   background: inherit;
   color: #ffffff;
-  font-size: 30px;
-  line-height: 60px;
+  font-size: 24px;
+  line-height: 2;
   position: relative;
 }
 
